# chargerUIApp

./: .gitignore  ButtonBar.qml  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.6415a8b  MenuButton.qml  PopupWindow.qml  UntitledProject2.qmlproject  UntitledProject2.qmlproject.qtds  UntitledProject2.qmlproject.qtds.9b68dc6  main.qml  qmlmodules  qtcsettings.cmake
content/: App.qml  ButtonBar.qml  CMakeLists.txt  Screen01.ui.qml  Screen02.ui.qml  Screen03.ui.qml  Screen04.ui.qml  SideBar.qml  TopBar.qml  mainwindow.ui.qml
imports/: CMakeLists.txt
imports/chargerUI/: CMakeLists.txt  Constants.qml  qmldir
imports/chargerUI/designer/: plugin.metainfo
src/: InternalOp.h  comUdpData.h  configurator.h  dataReceiveUDP.h  dataSendUDP.h  dataSetUI.h  dataUDP.h  databaseDriver.h  import_qml_plugins.h  main.cpp  serialRFID.h  socketudp.cpp  socketudp.h
